--- a/Black and White/Black and White-Info.plist
+++ b/Black and White/Black and White-Info.plist
@@ -10,6 +10,10 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>icon2.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>net.anticolour.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
